# LowRank_Transformer

./: Trainer.py  index.html  pyproject.toml  requirements.txt  training.py  training_utils.py
dataset/: TinyStoriesDataset.py
src/: CausalLanguageModel.py  Transformer.py
src/config/: TransformerConfig.py
src/layers/: FeedForward.py  LowRankLinear.py  LowRankMultiHeadAttention.py  RMSNorm.py  TransformerBlock.py
src/utils/: create_causal_mask.py  load_model.py  save_model.py
